# mimicrypt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: desktop-release.yml  mobile-build.yml
apps/desktop-tauri/: README.md  index.html  package-lock.json  package.json
apps/desktop-tauri/src/: App.tsx  model.ts  state.ts  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
crates/app-services/: Cargo.toml
crates/app-services/src/: lib.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/envelope/: Cargo.toml
crates/envelope/src/: lib.rs
crates/mail-transport/: Cargo.toml
crates/mail-transport/src/: lib.rs
crates/ratchet/: Cargo.toml
crates/ratchet/src/: lib.rs
crates/reliability/: Cargo.toml
crates/reliability/src/: lib.rs
crates/spec-types/: Cargo.toml
crates/spec-types/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/protocol/: spec.md
releases/ios/: BUILD-ON-MAC.md
scripts/: bootstrap-mobile-targets.sh  prepare-mobile-macos.sh
