[workspace]
members = [
  "crates/spec-types",
  "crates/crypto",
  "crates/bootstrap",
  "crates/ratchet",
  "crates/envelope",
  "crates/mail-transport",
  "crates/reliability",
  "crates/storage",
  "crates/app-services",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = "1.3.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
double-ratchet-2 = "0.4.0-pre.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "serde"] }
hkdf = "0.12.4"
imap = "2.4.1"
keyring = "3.6.3"
lettre = { version = "0.11.21", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
native-tls = "0.2.14"
rand = "0.8.5"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
