[package]
name = "mimicrypt-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
uuid.workspace = true
mimicrypt-crypto = { path = "../crypto" }
mimicrypt-spec-types = { path = "../spec-types" }
