[package]
name = "mimicrypt-ratchet"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
double-ratchet-2.workspace = true
serde.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
uuid.workspace = true
mimicrypt-spec-types = { path = "../spec-types" }
