[package]
name = "mimicrypt-app-shell"
version = "0.1.0"
description = "Installable cross-platform shell for Mimicrypt"
authors = ["OpenAI Codex"]
license = "MIT"
repository = "https://github.com/your-org/mimicrypt"
edition = "2021"
rust-version = "1.77.2"

[workspace]

[lib]
name = "mimicrypt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
mimicrypt-app-services = { path = "../../../crates/app-services" }
mimicrypt-storage = { path = "../../../crates/storage" }
